--- a/.github/workflows/katana-crawl.yml
+++ b/.github/workflows/katana-crawl.yml
@@ -38,6 +38,8 @@ jobs:
       - name: Install Dependencies
         run: |
           sudo apt-get update
+          sudo apt remove --purge man-db manpages manpages-dev
+          sudo apt autoremove
           sudo apt-get install -y wget curl unzip jq
           pip install requests beautifulsoup4 lxml pandas PyGithub
 
